k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: spacepod-ingress
spec:
  rules:
  - host: spacepod.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: spacepods-frontend-service
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: spacepods-backend-service
            port:
              number: 3000
  tls:
  - hosts:
    - spacepod.tino.sh
    secretName: spacepod-tino-sh-tls
